--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <form action="#">
-    <input id="text" type="text">
+    <input name="text" id="text" type="text">
     <input id="sub" type="submit">
 </form>
 <div id="div">
